--- a/src/test/resources/de/cismet/cids/integrationtests/docker-compose.yml
+++ b/src/test/resources/de/cismet/cids/integrationtests/docker-compose.yml
@@ -1,18 +1,27 @@
-db:
-  image: cismet/postgresql-postgis
+integrationbase:
+  image: cismet/cids-integration-base
   volumes:
-     -  /c/Users/pd/container-data/cismet/postgresql-postgis/cids_reference.sql:/data/dumps/cids_reference.sql
-    #- ~/container-data/cismet/postgresql-postgis/cids_reference.sql:/data/dumps/cids_reference.sql
-  log_driver: "json-file"
-cidsref:
-  image: cismet/cidsref
+    - cids-reference-cids-integration-base:/data
+    - ~/docker-volumes/cids-reference/cids-integration-base/import/:/import/cids-integration-base/
+  log_driver: "json-file"    
+cidsserver:
+  image: cismet/cids-server
   links:
-    - "db:db"
+    - "integrationbase:cids-integration-base"
+  environment:
+    CIDS_ACCOUNT_EXTENSION: CidsReference
   volumes:
-    - /c/Users/pd/container-data/settings.xml:/data/import/settings.xml
-    - /c/Users/pd/container-data/pom.xml:/data/import/pom.xml
-    - /c/Users/pd/container-data/runtime.properties:/data/import/runtime.properties
-    #- ~/container-data/settings.xml:/data/import/settings.xml
-    #- ~/container-data/pom.xml:/data/import/pom.xml
-    #- ~/container-data/runtime.properties:/data/import/runtime.properties
+    - cids-reference-cids-server:/data
+    - ~/docker-volumes/cids-reference/cids-server/import/:/import/cids-server/
+  log_driver: "json-file"    
+restlegacy:
+  image: cismet/cids-server-rest-legacy
+  links:
+    - "cidsserver:cids-server"
+  environment:
+    CIDS_ACCOUNT_EXTENSION: CidsReference
+  volumes_from:
+    - cidsserver
+  volumes:
+    - ~/docker-volumes/cids-reference/cids-server-rest-legacy/import/:/import/cids-server-rest-legacy/
   log_driver: "json-file"
