#159 add count db entities test

--- a/src/test/resources/de/cismet/cids/integrationtests/cidsIntegrationtests.properties
+++ b/src/test/resources/de/cismet/cids/integrationtests/cidsIntegrationtests.properties
@@ -6,3 +6,6 @@ userDomain=CIDS_REF
 broker.port=9986
 restservice.port=8890
 integrationbase.port=5434
+integrationbase.dbname=cids_reference
+integrationbase.username=postgres
+integrationbase.password=postgres
