--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <groupId>de.cismet.cids</groupId>
     <artifactId>cids-server</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0-UBA-SNAPSHOT</version>
     <packaging>jar</packaging>
  
     <properties>
@@ -137,7 +137,7 @@
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>cids-server-rest-types</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-UBA-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
