#194 update jackson-jaxrs-json-provider dependency scope

--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,8 @@
         <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
+            <!-- override managed scope -->
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>com.sun.jersey.contribs</groupId>
