--- a/pom.xml
+++ b/pom.xml
@@ -349,6 +349,17 @@
             <plugins>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <configuration>
+                        <archive>
+                            <manifest>
+                                <mainClass>Sirius.server.middleware.impls.domainserver.DomainServerImpl</mainClass>
+                            </manifest>
+                        </archive>
+                    </configuration>
+                </plugin>       
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
                         <dependenciesToScan>
